# fiware-idm-deprecated

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  README.md  README.rst  conf.py  fabfile.py  keyrock.html  keystone_idm.conf  requirements.txt  setup.cfg
api-spec/v3/: api-description-document.html  index.html
api-spec/v3/css/: api-specification-pdf.css  api-specification.css
conf/: _service_catalog.py  horizon_idm.conf  service_catalog.py  service_catalog.py.sample  settings.py  settings.py.example
deployment/: categories.json  fabfile.py  fiwareclient.py  horizon.py  keystone.py  migration.py
deployment/conf/: apache_horizon  settings.py
doc/: Makefile  README.md  admin_guide.md  admin_guide.rst  conf.py  developer_guide.md  developer_guide.rst  endpoints.rst  fed_private.rst  index.rst  introduction.rst  oauth2.md  oauth2.rst  setup.md  setup.rst  two_factor.rst  user_guide.md  user_guide.rst
doc/example_configs/: horizon_idm.conf  keystone_idm.conf
doc/resources/: fiware_style.css
docker/: README.md
extras/: keyrock.apib
extras/api_spec/: keyrock.html
extras/chef/: Berksfile  README.md  metadata.rb  node.json
extras/chef/attributes/: default.rb
extras/chef/fiware-idm/: node.json  solo.rb
extras/chef/recipes/: 0.0.1_configure.rb  0.0.1_install.rb  0.0.1_start.rb  0.0.1_stop.rb  0.0.1_uninstall.rb  5.3.0_install.rb  (+8 more)
extras/docker/: Dockerfile  README.md  docker-entrypoint.sh  expect_idm_password  requirements.txt
extras/scripts/: expect_idm_password  idm-installation.sh  idm-verification.sh
tools/: horizon.py  keystone.py  main.py
(+2 files in other folders)
