[metadata]
name = fiware-idm-admin-tools
author = UPM-GING
author-email = garcianavalon@gmail.com
summary = Tools for FIWARE Identity Manager administrators
description-file = README.rst
home-page = https://github/ging/fiware-idm
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: OpenStack
        Environment :: FIWARE
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    fiware
    idm

[files]
packages =
    tools

[entry_points]
console_scripts =
    idm-admin = tools.main:main

idmadmin.tools =
    console = tools.keystone:Console
    delete-region = tools.keystone:DeleteRegionAndEndpoints
    create-endpoints = tools.keystone:CreateNewEndpoints
    tweak-database = tools.keystone:DatabaseTweak
    cancel-accounts = tools.keystone:CancelAccounts

[pbr]
warnerrors = True


[wheel]
universal = 1
